- Isolate auth pages from Bootstrap/template CSS conflicts - Redesign auth layout to centered card-only experience - Improve contrast, spacing, focus states, and validation styling - Refactor Login/Register/Forgot/Reset/CheckInbox views to consistent UI

--- a/Route.PL/appsettings.json
+++ b/Route.PL/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cs": "Server=.;DataBase=RouteMVC;Trusted_Connection=True;TrustServerCertificate=True"
+    "cs": "Server=DESKTOP-E18ITUC\\SQLEXPRESS;DataBase=RouteMVC;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
